--- a/index.html
+++ b/index.html
@@ -75,8 +75,8 @@
     <div class="popup__container">
       <form name="edit-profile">
         <h2 class="popup__title">Редактировать профиль</h2>
-        <input class="popup__put-field" type="text" name="name">
-        <input class="popup__put-field popup__put-field_position_bottom-field" type="text" name="about-name">
+        <input class="popup__put-field popup__put-field_about_name" type="text" name="name">
+        <input class="popup__put-field popup__put-field_about_profession" type="text" name="about-name">
         <button class="popup__submit-button" type="submit">Сохранить</button>  
       </form> 
     </div>
