--- a/index.html
+++ b/index.html
@@ -22,64 +22,52 @@
     </section>
     <section>
       <ul class="elements">
-        <li class="element">
-          <img class="element__mask-group" src="images/kirill-pershin-Karachaevsk.jpg" alt="Фото Карачаевска">
-          <div class="element__box-for-name-group">
-            <h2 class="element__name-group">Карачаевск</h2>
-            <button class="element__group" type="button"></button>
-          </div>
-        </li>
-        <li class="element">
-          <img class="element__mask-group" src="images/kirill-pershin-Elbrus.jpg" alt="Фото горы Эльбрус">
-          <div class="element__box-for-name-group">
-            <h2 class="element__name-group">Гора Эльбрус</h2>
-            <button class="element__group" type="button"></button>
-          </div>
-        </li>
-        <li class="element">
-          <img class="element__mask-group" src="images/kirill-pershin-Dombay.jpg" alt="Фото Домбая">
-          <div class="element__box-for-name-group">
-            <h2 class="element__name-group">Домбай</h2>
-            <button class="element__group" type="button"></button>
-          </div>
-        </li>
-        <li class="element">
-          <img class="element__mask-group" src="images/kirill-pershin-Elbrus.jpg" alt="Фото горы Эльбрус">
-          <div class="element__box-for-name-group">
-            <h2 class="element__name-group">Гора Эльбрус</h2>
-            <button class="element__group" type="button"></button>
-          </div>
-        </li>
-        <li class="element">
-          <img class="element__mask-group" src="images/kirill-pershin-Dombay.jpg" alt="Фото Домбая">
-          <div class="element__box-for-name-group">
-            <h2 class="element__name-group">Домбай</h2>
-            <button class="element__group" type="button"></button>
-          </div>
-        </li>
-        <li class="element">
-          <img class="element__mask-group" src="images/kirill-pershin-Karachaevsk.jpg" alt="Фото Карачаевска">
-          <div class="element__box-for-name-group">
-            <h2 class="element__name-group">Карачаево-Черкесия</h2>
-            <button class="element__group" type="button"></button>
-          </div>
-        </li>
       </ul>
     </section>
   </main>
   <footer>
     <p class="footer">&copy; 2020 Mesto Russia</p>
   </footer> 
-  <dialog class="popup">
+  <dialog class="popup" id="popup-edit">
     <button class="popup__icon" type="button"></button>
     <div class="popup__container">
-      <form name="edit-profile">
+      <form name="edit-profile" id="edit-profile">
         <h2 class="popup__title">Редактировать профиль</h2>
-        <input class="popup__put-field popup__put-field_about_name" type="text" name="name">
-        <input class="popup__put-field popup__put-field_about_profession" type="text" name="about-name">
+        <input class="popup__put-field popup__put-field_about_name" type="text" name="name" placeholder="Имя" id="name" value="">
+        <input class="popup__put-field popup__put-field_about_profession" type="text" name="about-name" placeholder="О себе" id="about-name" value="">
         <button class="popup__submit-button" type="submit">Сохранить</button>  
       </form> 
     </div>
   </dialog>
+  <dialog class="popup" id="popup-add">
+    <button class="popup__icon" type="button"></button>
+    <div class="popup__container">
+      <form name="add-card" id="add-card">
+        <h2 class="popup__title">Новое место</h2>
+        <input class="popup__put-field popup__put-field_about_name" type="text" name="title" placeholder="Название" id="title" value="">
+        <input class="popup__put-field popup__put-field_about_profession" name="link" placeholder="Ссылка на картинку" id="link" value="">
+        <button class="popup__submit-button" type="submit">Создать</button>  
+      </form> 
+    </div>
+  </dialog>
+  <dialog class="popup" id="popup-view-img">
+    <button class="popup__icon" type="button"></button>
+      <figure class="popup__figure">
+      <img class="popup__img" src="" alt="">
+      <figcaption class="popup__caption"></figcaption>
+      </figure>
+  </dialog>
+  <template id="element-template">
+    <li class="element">
+      <button class="element__delete" type="button"></button>
+      <img class="element__mask-group" src="" alt="картинка">
+      <div class="element__box-for-name-group">
+        <h2 class="element__name-group"></h2>
+        <button class="element__group" type="button"></button>
+      </div>
+    </li>
+  </template>
+  <script src="./scripts/start-cards.js"></script>
+  <script src="./scripts/index.js"></script>
 </body>
 </html>
