--- a/index.html
+++ b/index.html
@@ -44,8 +44,8 @@
     <div class="popup__container">
       <form name="add-card" id="add-card">
         <h2 class="popup__title">Новое место</h2>
-        <input class="popup__put-field popup__put-field_about_name" type="text" name="title" placeholder="Название" id="title" value="">
-        <input class="popup__put-field popup__put-field_about_profession" name="link" placeholder="Ссылка на картинку" id="link" value="">
+        <input class="popup__put-field popup__put-field_about_name" required="required" type="text" name="title" placeholder="Название" id="title" value="">
+        <input class="popup__put-field popup__put-field_about_profession" required="required" name="link" placeholder="Ссылка на картинку" id="link" value="">
         <button class="popup__submit-button" type="submit">Создать</button>  
       </form> 
     </div>
